--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,14 @@
 <div>
-  <form class="form-login" [formGroup]="loginForm" (ngSubmit)="loginUser()">
+  <form class="form-login" >
       <h3 class="h3 mb-3 font-weight-normal text-center">Login</h3>
       <div class="form-group">
-          <label>Email</label>
-          <input type="email" class="form-control" formControlName="email" placeholder="Enter email" required>
+          <label>username</label>
+          <input type="text" class="form-control" name="username" [(ngModel)]="utilisateur.username" placeholder="Enter username" required>
       </div>
       <div class="form-group">
           <label>Password</label>
-          <input type="password" class="form-control" formControlName="password" placeholder="Password">
+          <input type="password" class="form-control" name="password" [(ngModel)]="utilisateur.password" placeholder="Password">
       </div>
-      <button type="submit" class="btn btn-block btn-primary">Login!</button>
+      <button type="submit" class="btn btn-block btn-primary" (click)="loginUser()">Login!</button>
   </form>
 </div>
